MiscUtil: better method for parsing URL from String (+ adapted unit test), removed uses of old interface of Location, better exception handling, ExceptionDialog: show source file readonly if inside jar