@@ -22,6 +22,8 @@ import java.net.URL;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.*;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 import java.util.zip.ZipFile;
 
 import de.uka.ilkd.key.java.recoderext.URLDataLocation;
@@ -62,6 +64,10 @@ import recoder.io.DataLocation;
  * Collection of some common, stateless functionality. Stolen from the weissInvariants side branch.
  */
 public final class MiscTools {
+
+    /** Pattern to parse URL scheme (capture group 1) and scheme specific part (group 2). */
+    private static final Pattern URL_PATTERN =
+            Pattern.compile("(^[a-zA-Z][a-zA-Z0-9\\+\\-\\.]*):(.*)");
 
     private MiscTools() {
     }
@@ -757,7 +763,7 @@ public final class MiscTools {
      */
     public static URI getZipEntryURI(ZipFile zipFile, String entryName) throws IOException {
 
-        Path zipPath = Paths.get(zipFile.getName());
+        Path zipPath = Paths.get(zipFile.getName()).toAbsolutePath().normalize();
 
         // TODO: Delete these lines when migrating to newer Java version!
         // These lines are needed since there is a bug in Java (up to Java 9 b80)
@@ -786,39 +792,87 @@ public final class MiscTools {
     }
 
     /**
-     * Tries to create a URL from the the given string. The method will be successful if the given
-     * string contains either a correct URL or a simple path (without "file:" prefix).
-     * @param str the string to convert
+     * This method is the central place for parsing a URL from a String. Allowed input formats are:
+     * <ul>
+     *     <li>from DataLocation:
+     *          <ul>
+     *              <li>URLDataLocation: URL:&lt;url&gt;</li>
+     *              <li>ArchiveDataLocation: ARCHIVE:&lt;filename&gt;?&lt;entry&gt;</li>
+     *              <li>FileDataLocation: FILE:&lt;filename&gt;</li>
+     *              <li>SpecDataLocation: &lt;type&gt;://&lt;location&gt;</li>
+     *          </ul>
+     *     </li>
+     *     <li>from URL: &lt;scheme&gt;:&lt;scheme_specific_part&gt;</li>
+     *     <li>from File/Path (in both cases, paths may be relative and/or not normalized!):
+     *          <ul>
+     *              <li>Unix:       /a/b/c</li>
+     *              <li>Windows:    &lt;drive_letter&gt;:\a\b\c\</li>
+     *          </ul>
+     *     </li>
+     * </ul>
+     *
+     * A NullPointerException is thrown if null is given.
+     * If the input is "", ".", or a relative path in general, the path is resolved against the
+     * current working directory (see system property "user.dir") consistently to the behaviour
+     * of {@link Paths#get(String, String...)}.
+     *
+     * @param input the String to convert
      * @return a URL if successful
-     * @throws MalformedURLException if the string can not be converted to URL
+     * @throws MalformedURLException if the string can not be converted to URL because of an
+     *      unknown protocol or illegal format
      */
-    public static URL tryParseURL(String str) throws MalformedURLException {
-        if (str == null) {
-            return null;
+    public static URL parseURL(final String input) throws MalformedURLException {
+        if (input == null) {
+            throw new NullPointerException("No URL can be created from null!");
         }
 
-        /* For empty string we explicitly have to return null.
-         * If we would not do this, a given empty string would result in a URL
-         * to the current working directory. */
-        if (str.isEmpty()) {
-            return null;
+        String scheme = "";
+        String schemeSpecPart = "";
+        Matcher m = URL_PATTERN.matcher(input);
+        if (m.matches() && m.groupCount() == 2) {
+            scheme = m.group(1);
+            schemeSpecPart = m.group(2);
         }
+        switch (scheme) {
+            case "URL":
+                // schemeSpecPart actually contains a URL again
+                return new URL(schemeSpecPart);
+            case "ARCHIVE":
+                // format: "ARCHIVE:<filename>?<itemname>"
+                // extract item name and zip file
+                int qmindex = schemeSpecPart.lastIndexOf('?');
+                String zipName = schemeSpecPart.substring(0, qmindex);
+                String itemName = schemeSpecPart.substring(qmindex + 1);
 
-        // sometimes parser produces a string of the form "URL:<url_string>" -> remove prefix
-        if (str.startsWith("URL:")) {
-            str = str.substring(4);
-        }
-
-        try {
-            // if this works we were lucky: str already had correct url format
-            return new URL(str);
-        } catch (Exception e) {
-            // If the above did not work, we hope that str contains only a path string.
-            // If this also fails, the method will throw an exception.
-            Path p = Paths.get(str);
-            // eliminate redundant parts (e.g. 'a/./b')
-            p = p.normalize();
-            return p.toUri().toURL();
+                try {
+                    ZipFile zip = new ZipFile(zipName);
+                    // use special method to ensure that path separators are correct
+                    return getZipEntryURI(zip, itemName).toURL();
+                } catch (IOException e) {
+                    MalformedURLException me = new MalformedURLException(input
+                            + " does not contain a valid URL");
+                    me.initCause(e);
+                    throw me;
+                }
+            case "FILE":
+                // format: "FILE:<path>"
+                Path path = Paths.get(schemeSpecPart).toAbsolutePath().normalize();
+                return path.toUri().toURL();
+            case "":
+                // only file/path without protocol
+                Path p = Paths.get(input).toAbsolutePath().normalize();
+                return p.toUri().toURL();
+            default:
+                // may still be Windows path starting with <drive_letter>:
+                if (scheme.length() == 1) {
+                    // TODO: Theoretically, a protocol with only a single letter is allowed.
+                    //  This (very rare) case currently is not handled correctly.
+                    Path windowsPath = Paths.get(input).toAbsolutePath().normalize();
+                    return windowsPath.toUri().toURL();
+                }
+                // otherwise call URL constructor
+                // if this also fails, there is an unknown protocol -> MalformedURLException
+                return new URL(input);
         }
     }
 }
